--- a/Blog.html
+++ b/Blog.html
@@ -10,7 +10,7 @@
     <header>
         <div class="profile">
             <img src="profile.jpg" alt="Profile Picture">
-            <h1>Your Name</h1>
+            <h1>Denuwan Nammuni</h1>
             <p>Web Developer | Designer | Programmer</p>
         </div>
     </header>
@@ -45,7 +45,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: your.email@example.com</p>
+        <p>Email: denuwannammuni@gmail.com</p>
         <p>LinkedIn: <a href="#">LinkedIn Profile</a></p>
     </section>
 
