--- a/Blog.html
+++ b/Blog.html
@@ -11,7 +11,7 @@
         <div class="profile">
             <img src="profile.jpg" alt="Profile Picture">
             <h1>Denuwan Nammuni</h1>
-            <p>Web Developer | Designer | Programmer</p>
+            <p>Web Developer | Programmer</p>
         </div>
     </header>
 
@@ -27,7 +27,7 @@
             <li>CSS</li>
             <li>JavaScript</li>
             <li>React</li>
-            <li>Node.js</li>
+            
         </ul>
    
     <section id="contact">
