--- a/Blog.html
+++ b/Blog.html
@@ -27,6 +27,7 @@
             <li>CSS</li>
             <li>JavaScript</li>
             <li>React</li>
+            <li>Python</li>
             
         </ul>
    
