--- a/Blog.html
+++ b/Blog.html
@@ -34,6 +34,7 @@
     <section id="contact">
         <h2>Contact</h2>
         <p>Email: denuwannammuni@gmail.com</p>
+        <p>Mobile: 0765595763</p>
         <p>LinkedIn: <a href="#">LinkedIn Profile</a></p>
     </section>
 
