--- a/Blog.html
+++ b/Blog.html
@@ -28,7 +28,7 @@
             <li>JavaScript</li>
             <li>React</li>
             <li>Python</li>
-            
+            <li>MERN</li>
         </ul>
    
     <section id="contact">
