--- a/Blog.html
+++ b/Blog.html
@@ -17,7 +17,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I'm a passionate web developer with experience in creating dynamic and responsive websites. I enjoy solving problems and learning new technologies.</p>
+        <p>Hello! I'm a passionate web developer & programmer with experience in creating dynamic and responsive websites. I enjoy solving problems and learning new technologies.</p>
     </section>
 
     <section id="skills">
