--- a/Blog.html
+++ b/Blog.html
@@ -5,39 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <header>
-        <div class="profile">
-            <img src="profile.jpg" alt="Profile Picture">
-            <h1>Denuwan Nammuni</h1>
-            <p>Web Developer | Programmer</p>
-        </div>
+    <header class="header">
+        <a href="#" class="logo"><span>Denu</span>wan</a>
+        <nav class="navbar">
+            <a href="#" class="active">Portfolio</a>
+            <a href="#">Sevices</a>
+            <a href="#">Experience</a>
+            <a href="#">Projects</a>
+            <a href="#">Education</a>
+            
+        </nav>
+        <a href="#" class="contact">Contact Me</a>
     </header>
+    <section class="home">
+        <div class="home-contact">
+            <h3>Hi</h3>
+            <h1>I'm <span> Denuwan <br>a frontend Developer</span></h1>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hello! I'm a passionate web developer & programmer with experience in creating dynamic and responsive websites. I enjoy solving problems and learning new technologies.</p>
+            <p>I am a frontend developer with a focus on creating responsive 
+                and user-friendly web interfaces.
+                 I turn designs into functional websites using HTML, CSS, and JavaScript, 
+                 ensuring a seamless and engaging user experience. 
+                 My work is driven by attention to detail and 
+                 a passion for modern web technologies.</p>
+
+                 <div class="btn-box">
+                    <button class="btn-1"> Hire Me </button>
+                    <button class="btn-2"> Experience</button>
+                 </div>
+        </div>
+        <div class="img-box">
+            <img src="image.jpg" alt="">
+        </div>
     </section>
 
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>Python</li>
-            <li>MERN</li>
-        </ul>
-   
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: denuwannammuni@gmail.com</p>
-        <p>Mobile: 0765595763</p>
-        <p>LinkedIn: <a href="#">LinkedIn Profile</a></p>
-    </section>
 
-    
 </body>
-</html>
+</html>    
