--- a/Blog.html
+++ b/Blog.html
@@ -40,6 +40,22 @@
         <div class="img-box">
             <img src="image.jpg" alt="">
         </div>
+
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Frontend <span>Developer </span></h3>
+            <p>I am a frontend developer with a focus on creating responsive 
+                and user-friendly web interfaces.
+                 I turn designs into functional websites using HTML, CSS, and JavaScript, 
+                 ensuring a seamless and engaging user experience. 
+                 My work is driven by attention to detail and 
+                 a passion for modern web technologies.</p>
+                 <a href="#" class="btn-2">Experience</a>
+        </div>
+    </section> 
+
+    <section class="about">
+        <img src="image.jpg" alt="">
     </section>
 
 
