--- a/Blog.html
+++ b/Blog.html
@@ -40,6 +40,12 @@
         <div class="img-box">
             <img src="image.jpg" alt="">
         </div>
+        </section>
+        <section class="about">
+            <div class="about-img">
+            <img src="image.jpg" alt="">
+        </div>
+        
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
@@ -54,9 +60,7 @@
         </div>
     </section> 
 
-    <section class="about">
-        <img src="image.jpg" alt="">
-    </section>
+    
 
 
 </body>
