--- a/Blog.html
+++ b/Blog.html
@@ -63,17 +63,20 @@
     <section class="contact-form">
         <h2 class="contact-me">Contact <span>Me</span></h2> 
 
-        <div>class="input-box">
+        <form action="#">
+
+        <div class="input-box">
         <input type="text" placeholder="Full Name">
         <input type="email" placeholder="Email">
     </div>
-    <div>class="input-box">
+    <div class="input-box">
         <input type="number" placeholder="Phone Number">
         <input type="text" placeholder="Subject">
     </div>
     <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
     <input type="submit" value="Send Message"
     class="btn-1">
+</form>
 
     </section>
 
