--- a/Blog.html
+++ b/Blog.html
@@ -80,7 +80,33 @@
 
     </section>
 
-    
+    <footer class="footer">
+        <div class="social">
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+        </div>
+
+        <ul class="list">
+            <li>
+                <a href="#">Sevices</a>
+            </li>
+            <li>
+                <a href="#">About Me</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+            <li>
+                <a href="#">Privacy Policy</a>
+            </li>
+
+            <p class="copyright">@ 2024 Denuwan | All Right Reserved</p>
+
+        </ul>
+
+    </footer>
 
 
 </body>
