--- a/Blog.html
+++ b/Blog.html
@@ -82,10 +82,10 @@
 
     <footer class="footer">
         <div class="social">
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+            <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+            <a href="#"><i class='bx bxl-instagram'></i></a>
+            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></a>
         </div>
 
         <ul class="list">
