--- a/Blog.html
+++ b/Blog.html
@@ -43,7 +43,7 @@
         </section>
         <section class="about">
             <div class="about-img">
-            <img src="image.jpg" alt="">
+            <img src="img-3.jpg" alt="">
         </div>
         
 
@@ -102,7 +102,7 @@
                 <a href="#">Privacy Policy</a>
             </li>
 
-            <p class="copyright">@ 2024 Denuwan | All Right Reserved</p>
+            <p class="copyright">@ 2024 Denuwan | All Rights Reserved</p>
 
         </ul>
 
