--- a/Blog.html
+++ b/Blog.html
@@ -61,25 +61,26 @@
     </section> 
 
     <section class="contact-form">
-        <h2 class="contact-me">Contact <span>Me</span></h2> 
-
-        <form action="#">
-
-        <div class="input-box">
-        <input type="text" placeholder="Full Name">
-        <input type="email" placeholder="Email">
-    </div>
-    <div class="input-box">
-        <input type="number" placeholder="Phone Number">
-        <input type="text" placeholder="Subject">
-    </div>
-    <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-    <input type="submit" value="Send Message"
-    class="btn-1">
-</form>
-
+        <div class="img-add">
+            <img src="img4.jpg" alt="">
+        </div>
+        <div class="form-container">
+            <h2 class="contact-me">Contact <span>Me</span></h2> 
+            <form action="#">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Email">
+                </div>
+                <div class="input-box">
+                    <input type="number" placeholder="Phone Number">
+                    <input type="text" placeholder="Subject">
+                </div>
+                <textarea name="" id="" cols="30" rows="5" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn-1">
+            </form>
+        </div>
     </section>
-
+    
     <footer class="footer">
         <div class="social">
             <a href="#"><i class='bx bxl-facebook-circle'></i></a>
