--- a/Blog.html
+++ b/Blog.html
@@ -22,13 +22,13 @@
     <section class="home">
         <div class="home-contact">
             <h3>Hi</h3>
-            <h1>I'm <span> Denuwan <br>a frontend Developer</span></h1>
+            <h1>I'm <span> Denuwan </span><br> Full Stack Developer</h1>
 
             
 
                  <div class="btn-box">
                     <button class="btn-1"> Hire Me </button>
-                    <a href="https://github.com/Denuwan01"><button class="btn-2"> Experience</button></a>
+                    <a href="https://github.com/Denuwan01"><button class="btn-2"> Download CV</button></a>
                  </div>
         </div>
         <div class="img-box">
@@ -45,13 +45,13 @@
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <h3>Frontend <span>Developer </span></h3>
-            <p>I am a frontend developer with a focus on creating responsive 
-                and user-friendly web interfaces.
-                 I turn designs into functional websites using HTML, CSS, and JavaScript, 
-                 ensuring a seamless and engaging user experience. 
-                 My work is driven by attention to detail and 
-                 a passion for modern web technologies.</p>
+           
+            <p> I am currently pursuing a BSc (Hons) in Computing and Information Systems at Sabaragamuwa University of
+                Sri Lanka. As an undergraduate student with a strong foundation in software engineering, I am eager to apply
+                my programming skills and theoretical knowledge to real-world scenarios. I am actively seeking an internship
+                opportunity where I can gain hands-on experience, contribute to meaningful projects, and develop
+                professionally within the tech industry. My academic background, coupled with my dedication to continuous
+                learning and growth, makes me a keen and motivated candidate ready to take on new challenges.</p>
                  <a href="#" class="btn-2">Experience</a>
         </div>
     </section> 
