--- a/Blog.html
+++ b/Blog.html
@@ -56,10 +56,46 @@
     </div>
 
      /*Services*/
-    <section class="services" id="services"></section>
+    <section class="services" id="services">
+        <h2 class="heading">Services</h2>
 
-    <h2 class="heading">Services</h2>
-    <div class="services-container"></div>
+        <div class="services-container">
+            <div class="service-box">
+            <div class="service-info">
+                <i class="bx bxl-figma"></i>
+                <h4>UI / UX Design</h4>
+                <p>UI/UX design creates user-friendly, visually appealing interfaces. 
+                    UI design focuses on layout and aesthetics, while UX design ensures 
+                    intuitive and seamless interactions. Together, they provide 
+                    an engaging user experience.</p>
+            </div>
+        </div>
+        <div class="service-box"></div>
+            <div class="service-info">
+                <i class="bx bx-code"></i>
+                <h4>Frontend Development</h4>
+                <p>UI/UX design creates user-friendly, visually appealing interfaces. 
+                    UI design focuses on layout and aesthetics, while UX design ensures 
+                    intuitive and seamless interactions. Together, they provide 
+                    an engaging user experience.</p>
+            </div>
+        </div>
+        <div class="service-box"></div>
+            <div class="service-info">
+                <i class="bx bx-code-curly"></i>
+                <h4>Backend Development</h4>
+                <p>UI/UX design creates user-friendly, visually appealing interfaces. 
+                    UI design focuses on layout and aesthetics, while UX design ensures 
+                    intuitive and seamless interactions. Together, they provide 
+                    an engaging user experience.</p>
+            </div>
+        </div>
+    </div>
+
+
+
+    </section>
+
     
 
     /*projects*/
