--- a/Blog.html
+++ b/Blog.html
@@ -55,7 +55,7 @@
     </section> 
     </div>
 
-     /*Services*/
+     <!--services-->
     <section class="services" id="services">
         <h2 class="heading">Services</h2>
 
