finished services part

--- a/Blog.html
+++ b/Blog.html
@@ -53,52 +53,46 @@
                  <a href="#" class="btn-2">Experience</a>
         </div>
     </section> 
-    </div>
+
 
      <!--services-->
+
     <section class="services" id="services">
         <h2 class="heading">Services</h2>
 
         <div class="services-container">
             <div class="service-box">
-            <div class="service-info">
-                <i class="bx bxl-figma"></i>
-                <h4>UI / UX Design</h4>
-                <p>UI/UX design creates user-friendly, visually appealing interfaces. 
-                    UI design focuses on layout and aesthetics, while UX design ensures 
-                    intuitive and seamless interactions. Together, they provide 
-                    an engaging user experience.</p>
+                <div class="service-info">
+                    <i class="bx bxl-figma"></i>
+                    <h4>UI / UX Design</h4>
+                    <p>UI/UX design creates user-friendly, visually appealing interfaces. 
+                        UI design focuses on layout and aesthetics, while UX design ensures 
+                        intuitive and seamless interactions. Together, they provide 
+                        an engaging user experience.</p>
+                </div>
+            </div>
+            <div class="service-box">
+                <div class="service-info">
+                    <i class="bx bx-code"></i>
+                    <h4>Frontend Development</h4>
+                    <p>Building responsive and interactive websites using HTML, CSS, and JavaScript. 
+                       Ensuring the best user experience through efficient code and beautiful designs.</p>
+                </div>
+            </div>
+            <div class="service-box">
+                <div class="service-info">
+                    <i class="bx bx-code-curly"></i>
+                    <h4>Backend Development</h4>
+                    <p>Developing server-side logic, managing databases, and ensuring data security 
+                       to support and power the frontend interfaces.</p>
+                </div>
             </div>
         </div>
-        <div class="service-box"></div>
-            <div class="service-info">
-                <i class="bx bx-code"></i>
-                <h4>Frontend Development</h4>
-                <p>UI/UX design creates user-friendly, visually appealing interfaces. 
-                    UI design focuses on layout and aesthetics, while UX design ensures 
-                    intuitive and seamless interactions. Together, they provide 
-                    an engaging user experience.</p>
-            </div>
-        </div>
-        <div class="service-box"></div>
-            <div class="service-info">
-                <i class="bx bx-code-curly"></i>
-                <h4>Backend Development</h4>
-                <p>UI/UX design creates user-friendly, visually appealing interfaces. 
-                    UI design focuses on layout and aesthetics, while UX design ensures 
-                    intuitive and seamless interactions. Together, they provide 
-                    an engaging user experience.</p>
-            </div>
-        </div>
-    </div>
-
-
-
     </section>
 
     
 
-    /*projects*/
+    <!--projects-->
 
     <div id="projects">
         <section class="about">
