--- a/Blog.html
+++ b/Blog.html
@@ -14,7 +14,7 @@
             <a href="#" class="active">Portfolio</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
-            <a href="#projects">Projects</a>
+            <a href="#Projects">Projects</a>
             
         </nav>
         <a href="#contact" class="contact">Contact Me</a>
@@ -99,47 +99,47 @@
 
     <div class="projects-box">
         <div class="project-card">
-            <img src="project1.png" alt="">
+            <img src="project-1.jpg" alt="">
             <h3>Project 1</h3>
             <p>Developed LearnPro, a mobile app that boosts study effectiveness using
                 techniques like Pomodoro and active recall. The app creates flashcards from
                 PDFs and includes a reward system and a community for sharing study materials.</p>
                 <div class="btn">Review project</div>
         </div>
-        <div class="project-card"></div>
-            <img src="image.jpg" alt="">
+        <div class="project-card">
+            <img src="project-1.jpg" alt="">
             <h3>Project 2</h3>
             <p>Developed LearnPro, a mobile app that boosts study effectiveness using
                 techniques like Pomodoro and active recall. The app creates flashcards from
                 PDFs and includes a reward system and a community for sharing study materials.</p>
                 <div class="btn">Review project</div>
         </div>
-        <div class="project-card"></div>
-            <img src="project1.png" alt="">
+        <div class="project-card">
+            <img src="project-1.jpg" alt="">
             <h3>Project 3</h3>
             <p>Developed LearnPro, a mobile app that boosts study effectiveness using
                 techniques like Pomodoro and active recall. The app creates flashcards from
                 PDFs and includes a reward system and a community for sharing study materials.</p>
                 <div class="btn">Review project</div>
         </div>
-        <div class="project-card"></div>
-            <img src="project1.png" alt="">
+        <div class="project-card">
+            <img src="project-1.jpg" alt="">
             <h3>Project 4</h3>
             <p>Developed LearnPro, a mobile app that boosts study effectiveness using
                 techniques like Pomodoro and active recall. The app creates flashcards from
                 PDFs and includes a reward system and a community for sharing study materials.</p>
                 <div class="btn">Review project</div>
         </div>
-        <div class="project-card"></div>
-            <img src="project1.png" alt="">
+        <div class="project-card">
+            <img src="project-1.jpg" alt="">
             <h3>Project 5</h3>
             <p>Developed LearnPro, a mobile app that boosts study effectiveness using
                 techniques like Pomodoro and active recall. The app creates flashcards from
                 PDFs and includes a reward system and a community for sharing study materials.</p>
                 <div class="btn">Review project</div>
         </div>
-        <div class="project-card"></div>
-            <img src="project1.png" alt="">
+        <div class="project-card">
+            <img src="project-1.jpg" alt="">
             <h3>Project 6</h3>
             <p>Developed LearnPro, a mobile app that boosts study effectiveness using
                 techniques like Pomodoro and active recall. The app creates flashcards from
@@ -185,13 +185,13 @@
 
         <ul class="list">
             <li>
-                <a href="#">Sevices</a>
+                <a href="#services">Sevices</a>
             </li>
             <li>
-                <a href="#">About Me</a>
+                <a href="#about">About Me</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="#contact">Contact</a>
             </li>
             <li>
                 <a href="#">Privacy Policy</a>
