--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="btn">Review project</div>
             </div>
             <div class="project-card">
-                <img src="project-1.jpg" alt="">
+                <img src="color-picker.png" alt="">
                 <h3>Image Color Detection</h3>
                 <p> Developed an Image Color Detection tool that identifies and extracts the
                     dominant colors from images, providing precise color analysis for various
