--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <a href="#" class="logo"><span>Denu</span>wan</a>
         <nav class="navbar">
-            <a href="#" class="active">Portfolio</a>
+            <a href="#">Portfolio</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
             <a href="#Projects">Projects</a>
@@ -189,6 +189,7 @@
             <a href="#"><i class='bx bxl-instagram'></i></a>
             <a href="#"><i class='bx bxl-linkedin-square'></i></a>
             <a href="#"><i class='bx bxl-twitter'></i></a>
+            <a href="#"><i class='bx bxl-github'></i></a>
         </div>
 
         <ul class="list">
