--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <div class="btn-box">
                 <button class="btn-1"> Hire Me </button>
-                <a href="Blue Simple Professional CV Resume (1).pdf"><button class="btn-2" type="download"> Download
+                <a href="my CV.pdf"><button class="btn-2" type="download"> Download
                         CV</button></a>
             </div>
         </div>
