--- a/index.html
+++ b/index.html
@@ -185,11 +185,13 @@
 
     <footer class="footer">
         <div class="social">
-            <a href="#"><i class='bx bxl-facebook-circle'></i></a>
-            <a href="#"><i class='bx bxl-instagram'></i></a>
-            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-            <a href="#"><i class='bx bxl-twitter'></i></a>
-            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="https://www.facebook.com/denuwan.nammuni.3?mibextid=LQQJ4d"><i
+                    class='bx bxl-facebook-circle'></i></a>
+            <a href="https://www.instagram.com/.denuwan.?igsh=MTNtbDl3OHhucDkzaQ%3D%3D&utm_source=qr"><i
+                    class='bx bxl-instagram'></i></a>
+            <a href="http://www.linkedin.com/in/denuwan-nammuni-7b1b082b4"><i class='bx bxl-linkedin-square'></i></a>
+            <a href="https://x.com/denuwan25716062?s=21"><i class='bx bxl-twitter'></i></a>
+            <a href="https://github.com/Denuwan01"><i class='bx bxl-github'></i></a>
         </div>
 
         <ul class="list">
