--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@
         </nav>
         <a href="#contact" class="contact">Contact Me</a>
     </header>
+    <!-- <header class="header">
+        <a href="#" class="logo"><span>Denu</span>wan</a>
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <nav class="navbar">
 
+            <a href="#">Portfolio</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#Projects">Projects</a>
+        </nav>
+        <a href="#contact" class="contact">Contact Me</a>
+    </header> -->
 
     <section class="home">
         <div class="home-contact">
