--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         </nav>
         <a href="#contact" class="contact">Contact Me</a>
-    </header>   
+    </header>
 
     <section class="home">
         <div class="home-contact">
@@ -112,7 +112,9 @@
                 <p>Developed LearnPro, a mobile app that boosts study effectiveness using
                     techniques like Pomodoro and active recall. The app creates flashcards from
                     PDFs and includes a reward system and a community for sharing study materials.</p>
-                <div class="btn">Review project</div>
+                <a href="https://github.com/CapstoneProject-Group-32/LearnPro.git">
+                    <div class="btn">Review project</div>
+                </a>
             </div>
             <div class="project-card">
                 <img src="photo.jpg" alt="">
@@ -120,7 +122,9 @@
                 <p> Created a Photography Web Application with a responsive, visually appealing
                     portfolio and intuitive navigation, showcasing photographs in a clean, engaging
                     layout for a seamless user experience.</p>
-                <div class="btn">Review project</div>
+                <a href="https://github.com/Denuwan01/Denuwan01.github.io.git">
+                    <div class="btn">Review project</div>
+                </a>
             </div>
             <div class="project-card">
                 <img src="online-books-scaled.jpg" alt="">
@@ -128,7 +132,9 @@
                 <p> Developed a Book Store project with a user-friendly interface, search
                     functionality, shopping cart, and secure payment gateway for a seamless online
                     shopping experience.</p>
-                <div class="btn">Review project</div>
+                <a href="https://github.com/Denuwan01/Book-Store-Project.git">
+                    <div class="btn">Review project</div>
+                </a>
             </div>
             <div class="project-card">
                 <img src="food.jpg" alt="">
@@ -136,7 +142,9 @@
                 <p>Developed a user-friendly web application for facilitating online food delivery,
                     highlighting my expertise in
                     web development and design.</p>
-                <div class="btn">Review project</div>
+                <a href="">
+                    <div class="btn">Review project</div>
+                </a>
             </div>
             <div class="project-card">
                 <img src="color-picker.png" alt="">
@@ -144,14 +152,18 @@
                 <p> Developed an Image Color Detection tool that identifies and extracts the
                     dominant colors from images, providing precise color analysis for various
                     applications.</p>
-                <div class="btn">Review project</div>
+                <a href="https://github.com/Denuwan01/Image-Color-detection-Software.git">
+                    <div class="btn">Review project</div>
+                </a>
             </div>
             <div class="project-card">
                 <img src="project-1.jpg" alt="">
                 <h3>E-Commerce</h3>
                 <p>Created a comprehensive e-commerce platform for buying and selling, showcasing my skills in web
                     development, user experience design, and online transaction management.</p>
-                <div class="btn">Review project</div>
+                <a href="https://github.com/Denuwan01/E--Commerce-Application-.git">
+                    <div class="btn">Review project</div>
+                </a>
             </div>
         </div>
 
